// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:button 1`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Panel amis-Panel--default amis-Panel--form"
      data-role="container"
    >
      <div
        class="amis-Panel-heading"
      >
        <h3
          class="amis-Panel-title"
        >
          <span
            class="amis-TplField fr-view"
          >
            <span>
              The form
            </span>
          </span>
        </h3>
      </div>
      <div
        class="amis-Panel-body"
      >
        <form
          class="amis-Form amis-Form--normal"
          novalidate=""
        >
          <input
            style="display: none;"
            type="submit"
          />
          <div
            class="amis-Form-item amis-Form-item--normal"
            data-amis-name="test"
            data-role="form-item"
          >
            <button
              class="amis-Button amis-Button--default amis-Button--size-default"
              type="button"
            >
              <i
                class="fa fa-plus amis-Button-icon fa fa-plus"
              />
              <span>
                Text
              </span>
            </button>
          </div>
          <div
            class="amis-Form-item amis-Form-item--normal"
            data-role="form-item"
          >
            <button
              class="amis-Button amis-Button--default amis-Button--size-default"
              type="button"
            >
              <span>
                OpenDialog
              </span>
            </button>
          </div>
          <div
            class="amis-Form-item amis-Form-item--normal"
            data-role="form-item"
          >
            <button
              class="amis-Button amis-Button--primary amis-Button--size-default"
              type="submit"
            >
              <span>
                Submit
              </span>
            </button>
          </div>
          <div
            class="amis-Form-item amis-Form-item--normal r-2x"
            data-role="form-item"
          >
            <button
              class="amis-Button amis-Button--danger amis-Button--size-sm"
              type="reset"
            >
              <span>
                Reset
              </span>
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:button 2`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Panel amis-Panel--default amis-Panel--form"
      data-role="container"
    >
      <div
        class="amis-Panel-heading"
      >
        <h3
          class="amis-Panel-title"
        >
          <span
            class="amis-TplField fr-view"
          >
            <span>
              The form
            </span>
          </span>
        </h3>
      </div>
      <div
        class="amis-Panel-body"
      >
        <form
          class="amis-Form amis-Form--normal"
          novalidate=""
        >
          <input
            style="display: none;"
            type="submit"
          />
          <div
            class="amis-Form-item amis-Form-item--normal"
            data-amis-name="test"
            data-role="form-item"
          >
            <button
              class="amis-Button amis-Button--default amis-Button--size-default"
              type="button"
            >
              <i
                class="fa fa-plus amis-Button-icon fa fa-plus"
              />
              <span>
                Text
              </span>
            </button>
          </div>
          <div
            class="amis-Form-item amis-Form-item--normal"
            data-role="form-item"
          >
            <button
              class="amis-Button amis-Button--default amis-Button--size-default"
              type="button"
            >
              <span>
                OpenDialog
              </span>
            </button>
          </div>
          <div
            class="amis-Form-item amis-Form-item--normal"
            data-role="form-item"
          >
            <button
              class="amis-Button amis-Button--primary amis-Button--size-default"
              type="submit"
            >
              <span>
                Submit
              </span>
            </button>
          </div>
          <div
            class="amis-Form-item amis-Form-item--normal r-2x"
            data-role="form-item"
          >
            <button
              class="amis-Button amis-Button--danger amis-Button--size-sm"
              type="reset"
            >
              <span>
                Reset
              </span>
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
  <div
    class="amis-dialog-widget amis-Modal amis-Modal--1th"
    data-amis-theme="cxd"
    role="dialog"
  >
    <div
      class="amis-Modal-overlay in"
    />
    <div
      class="amis-Modal-content in"
    >
      <div
        class="amis-Modal-header"
      >
        <a
          class="amis-Modal-close"
          data-position="left"
          data-tooltip="关闭"
        >
          <icon-mock
            classname="icon icon-close"
            icon="close"
          />
        </a>
        <div
          class="amis-Modal-title"
        >
          提示
        </div>
      </div>
      <div
        class="amis-Modal-body"
        role="dialog-body"
      >
        <span
          class="amis-TplField fr-view"
        >
          <span>
            对，你刚点击了！
          </span>
        </span>
      </div>
      <div
        class="amis-Modal-footer"
      >
        <button
          class="amis-Button amis-Button--default amis-Button--size-default"
          type="button"
        >
          <span>
            取消
          </span>
        </button>
        <button
          class="amis-Button amis-Button--primary amis-Button--size-default"
          type="button"
        >
          <span>
            确认
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
